--- a/css/main.css
+++ b/css/main.css
@@ -109,3 +109,41 @@ main {
 .time strong {
     font-family: 'Montserrat', sans-serif;
 }
+
+.columns {
+    overflow: auto;
+}
+
+.ingredients {
+    float: left;
+    width: 205px;
+    margin-right: 15px;
+}
+
+.ingredients ul {
+    padding-left: 15px;
+    line-height: 23px;
+    list-style-type: square;
+}
+
+.directions {
+    float: left;
+    width: 240px;
+}
+
+.directions ol {
+    padding-left: 15px;
+    line-height: 23px;
+}
+
+.recipe h3 {
+   padding: 8px;
+   border-top: 1px solid #3b3b3b;
+   border-bottom: 1px solid #3b3b3b;
+   color: #f16059;
+   font-family: 'Montserrat', sans-serif;
+   font-size: 12px;
+   font-weight: 700;
+   text-transform: uppercase;
+}
+/* END */
